--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Client for Confecciones Colombia haskell app",
   "main": "./app/main.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/rogithub/ccclient/issues"
   },
-  "homepage": "https://github.com/rogithub/ccclient#readme"
+  "homepage": "https://github.com/rogithub/ccclient#readme",
+  "dependencies": {
+    "electron": "^3.0.10"
+  }
 }
