--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Client for Confecciones Colombia haskell app",
   "main": "./app/main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "electron . --disable-gpu",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,5 +25,6 @@
   "homepage": "https://github.com/rogithub/ccclient#readme",
   "dependencies": {
     "electron": "^3.0.10"
-  }
+  },
+  "devDependencies": {}
 }
