--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "concurrently": "^4.1.0",
     "electron": "^3.0.10",
     "electron-builder": "^20.38.1",
@@ -12,24 +13,25 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "uninstall": "0.0.0",
     "wait-on": "^3.2.0"
   },
   "scripts": {
     "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron . --disable-gpu\"",
     "start": "react-scripts start",
-    "build": "react-scripts build",    
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron-pack": "build --em.main=build/electron.js",
-    "preelectron-pack": "npm build"  
+    "preelectron-pack": "npm build"
   },
   "build": {
-    "appId": "confeccionescolombia.electron",
+    "appId": "cc.electron",
     "files": [
       "build/**/*",
       "node_modules/**/*"
     ],
-    "directories":{
+    "directories": {
       "buildResources": "assets"
     }
   },
