--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
-    "bootstrap": "^4.1.3",
+    "@material-ui/core": "^3.6.0",
+    "@material-ui/icons": "^3.0.1",
     "concurrently": "^4.1.0",
     "electron": "^3.0.10",
     "electron-builder": "^20.38.1",
@@ -13,6 +14,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "typeface-roboto": "0.0.54",
     "uninstall": "0.0.0",
     "wait-on": "^3.2.0"
   },
