--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "electron-is-dev": "^1.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
     "typeface-roboto": "0.0.54",
     "uninstall": "0.0.0",
     "wait-on": "^3.2.0"
