--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
     "concurrently": "^4.1.0",
     "electron": "^3.0.10",
     "electron-builder": "^20.38.1",
