--- a/package.json
+++ b/package.json
@@ -1,44 +1,23 @@
 {
   "name": "ccclient",
-  "main": "public/electron.js",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
   "dependencies": {
-    "@material-ui/core": "^3.6.0",
+    "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
-    "concurrently": "^4.1.0",
-    "electron": "^3.0.10",
-    "electron-builder": "^20.38.1",
-    "electron-is-dev": "^1.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-redux": "^5.1.1",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
-    "typeface-roboto": "0.0.54",
-    "uninstall": "0.0.0",
-    "wait-on": "^3.2.0"
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
-    "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron . --disable-gpu\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "electron-pack": "build --em.main=build/electron.js",
-    "preelectron-pack": "npm build"
-  },
-  "build": {
-    "appId": "cc.electron",
-    "files": [
-      "build/**/*",
-      "node_modules/**/*"
-    ],
-    "directories": {
-      "buildResources": "assets"
-    }
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,6 +27,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {}
+  ]
 }
