--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.18.0",
     "react": "^16.6.3",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.3",
     "redux": "^4.0.1",
     "redux-form": "^8.0.4",
     "redux-thunk": "^2.3.0",
